ver 0.19.2 (not yet released)
* decoder
  - faad: remove workaround for ancient libfaad2 ABI bug
  - ffmpeg: recognize MIME type audio/aacp
* output
  - fix memory leak after filter initialization error
* fix assertion failure on unsupported PCM conversion
* auto-disable plugins that require GLib when --disable-glib is used

ver 0.19.1 (2014/10/19)
* input
  - mms: fix deadlock bug
* playlist
  - extm3u: fix Extended M3U detection
  - m3u, extm3u, cue: fix truncated lines
* fix build failure on Mac OS X
* add missing file systemd/mpd.socket to tarball

ver 0.19 (2014/10/10)
* protocol
  - new commands "addtagid", "cleartagid", "listfiles", "listmounts",
    "listneighbors", "mount", "rangeid", "unmount"
  - "lsinfo" and "readcomments" allowed for remote files
  - "listneighbors" lists file servers on the local network
  - "playlistadd" supports file:///
  - "idle" with unrecognized event name fails
  - "list" on album artist falls back to the artist tag
  - "list" and "count" allow grouping
  - new "search"/"find" filter "modified-since"
  - "seek*" allows fractional position
  - close connection after syntax error
* database
  - proxy: forward "idle" events
  - proxy: forward the "update" command
  - proxy: copy "Last-Modified" from remote directories
  - simple: compress the database file using gzip
  - upnp: new plugin
  - cancel the update on shutdown
* storage
  - music_directory can point to a remote file server
  - nfs: new plugin
  - smbclient: new plugin
* playlist
  - cue: fix bogus duration of the last track
  - cue: restore CUE tracks from state file
  - soundcloud: use https instead of http
  - soundcloud: add default API key
* archive
  - read tags from songs in an archive
* input
  - alsa: new input plugin
  - curl: options "verify_peer" and "verify_host"
  - ffmpeg: update offset after seeking
  - ffmpeg: improved error messages
  - mms: non-blocking I/O
  - nfs: new input plugin
  - smbclient: new input plugin
* filter