@@ -4,6 +4,7 @@ ver 0.19.2 (not yet released)
   - ffmpeg: recognize MIME type audio/aacp
 * output
   - fix memory leak after filter initialization error
+  - fall back to PCM if given DSD sample rate is not supported
 * fix assertion failure on unsupported PCM conversion
 * auto-disable plugins that require GLib when --disable-glib is used
 
